[package]
name = "tabletop"
version = "0.0.1"
authors = [ "Chris Ohk <utilforever@gmail.com>" ]
edition = "2021"
description = "Tabletop simulator using Rust with some reinforcement learning"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
